@@ -3,8 +3,8 @@
 #define SCOREP_CFLAGS        "@COMPILER_INSTRUMENTATION_CPPFLAGS@"
 #define SCOREP_LDFLAGS       "@COMPILER_INSTRUMENTATION_LDFLAGS@"
 #define SCOREP_OPENMP_CFLAGS "@OPENMP_CFLAGS@"
-#define SCOREP_PREFIX        "@prefix@"
 #define SCOREP_INCLUDEDIR    "@INCLUDEDIR@"
+#define SCOREP_BINDIR        "@BINDIR@"
 #define SCOREP_CC            "@CC@"
 #define SCOREP_CXX           "@CXX@"
 #define SCOREP_FC            "@FC@"
